--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ ul {
 
 .left-block {
     width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 button {
@@ -41,6 +44,8 @@ button {
     height: 40px;
     background-color: #3882F6;
     color: #E5E7EB;
+    border-radius: 30px;
+    border: none;
 }
 
 .hero-img {
@@ -63,6 +68,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 30px;
+    padding: 100px;
 }
 
 .org-chart .subject {
@@ -81,6 +88,7 @@ button {
     height: 200px;
     border: 2px solid #3882F6;
     background-color: transparent;
+    border-radius: 30px;
 }
 .img-text {
     width: 200px;
@@ -94,6 +102,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 100px;
 }
 
 .subquote {
@@ -110,21 +119,37 @@ button {
     display: flex;
     justify-content: center;
 }
+.cta-box button {
+    border: 2px solid #E5E7EB ;
+    width: 180px;
+    height: 60px;
+}
 
 .cta-box {
     background-color: #3882F6;
     font-size: 36px;
+    border-radius: 30px;
     color: #F9FAF8;
     width: 1100px;
     height: 150px;
     display: flex;
+    justify-content: space-around;
     align-items: center;
     padding: 20px 100px;
     margin: 100px;
+}
+
+.cta .subtext {
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .footer {
     background-color: #1F2937;
     font-size: 18px;
     color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
 }
